# ChangeLog for sys-cluster/ganglia
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-cluster/ganglia/ChangeLog,v 1.35 2010/04/23 03:50:43 jsbronder Exp $

*ganglia-3.1.7 (23 Apr 2010)

  23 Apr 2010; Justin Bronder <jsbronder@gentoo.org> +ganglia-3.1.7.ebuild:
  Version and EAPI bump, add support for prefix. Remove warning for older
  versions of ganglia that are no longer in the tree.

*ganglia-3.1.2-r1 (09 Jan 2010)

  09 Jan 2010; Justin Bronder <jsbronder@gentoo.org>
  +ganglia-3.1.2-r1.ebuild:
  EAPI bump. Depend on a font when installing the web interface as rrdtool
  no longer includes one. Use-deps on dev-lang/php.

  13 Jul 2009; Justin Bronder <jsbronder@gentoo.org> files/gmetad.rc,
  files/gmond.rc:
  Start ganglia services after ntp{d,-client}.
  http://thread.gmane.org/gmane.comp.monitoring.ganglia.general/202/

  20 Jun 2009; Justin Bronder <jsbronder@gentoo.org> ganglia-3.1.2.ebuild:
  Fix permissions on /var/lib/ganglia/rrds, #273695

  20 Jun 2009; Justin Bronder <jsbronder@gentoo.org>
  -ganglia-3.1.1-r2.ebuild:
  Remove old versions.

  20 Jun 2009; Justin Bronder <jsbronder@gentoo.org> ganglia-3.1.2.ebuild:
  Require php with pcre enabled when building the server. #273703.

  05 Apr 2009; Markus Meier <maekke@gentoo.org> ganglia-3.1.2.ebuild:
  amd64/x86 stable, bug #263916

  28 Mar 2009; nixnut <nixnut@gentoo.org> ganglia-3.1.2.ebuild:
  ppc stable #263916

  22 Feb 2009; Justin Bronder <jsbronder@gentoo.org> ganglia-3.1.2.ebuild:
  Use in pkg_postrm, thanks to dberkholz for pointing out my mistake.

  21 Feb 2009; Justin Bronder <jsbronder@gentoo.org> metadata.xml:
  May as well take over as maintainer.

*ganglia-3.1.2 (21 Feb 2009)

  21 Feb 2009; Justin Bronder <jsbronder@gentoo.org> +ganglia-3.1.2.ebuild:
  Bump sys-cluster/ganglia-3.1.2.

  21 Feb 2009; Justin Bronder <jsbronder@gentoo.org>
  -files/ganglia-3.1.0-gmetad-hierarchical.patch,