@@ -10,13 +10,14 @@ DIST ganglia-3.1.2.tar.gz 1213196 RMD160 1f78cf1019759e12c3c65901fd74ac65dfddf4e
 DIST ganglia-3.1.7.tar.gz 1278023 RMD160 918d678ad234d477fc98427d96485a8111c64f06 SHA1 e234d64814af1c9f55f1cd039a5840039d175f85 SHA256 bb1a4953d72e7dace76010a30d6d332e4ac0991d1371dbbcbcc7b048e0a7e4bf
 EBUILD ganglia-3.1.2-r1.ebuild 5373 RMD160 f372eb02bfb205e97db07be75fb56d7dcc45dd95 SHA1 afa437af31e38a9c49a6c3be4bcdd49220860627 SHA256 97818bed111541ee568eeb79423ddbca991fd43937843335a3346df6186ee431
 EBUILD ganglia-3.1.2.ebuild 5443 RMD160 7d197d8e757da5f59f407f308cb6c913436a6684 SHA1 9e79e653bbc172900a5ba82e002308fb4bedd5ca SHA256 25ddc5a87a7908cde9448db3f391877c8eec074ca552127d550fc5f071025d92
+EBUILD ganglia-3.1.7-r1.ebuild 2784 RMD160 0f0393fde31da3aca0b35e0e6538771ccc027781 SHA1 2e6d5e53bfe5cb4a00ab2f0d4c0f8148937ab132 SHA256 b30672c2c669fbe02b118ba7a8a9104fb1e7e17d803b3a1157d2bf7d5eb312cc
 EBUILD ganglia-3.1.7.ebuild 4947 RMD160 285b502c6c4d59404b5778fd7519b728be107b92 SHA1 747565b227cd857ae902d690d867c0cdc7ccf92f SHA256 e927878b153242889c96da9b1c427b2290f7a359596fb4566826101fd9e49bc5
-MISC ChangeLog 7647 RMD160 9ada9ff2031f8746d15536f32507ca8cf2db992f SHA1 c83aeda2aebfe737ae929bd01bebb7d9f2548279 SHA256 9957f0f862c5a8445c59c1a6ab9e8cab77ab61227e790382878a7fb3eae04a9e
+MISC ChangeLog 7929 RMD160 6cbd49d9ef41b2a1c3149695dce3c1a5a0b580f2 SHA1 58395e8f46600e551392004bff04dcc1b5b65312 SHA256 abc129171ad2a976bd0d1e8c5e21a6c16a0e73cc7ea9bcda4c94d2fddc4e13d7
 MISC metadata.xml 231 RMD160 37dd476ccaceaa37796cf29fd01af8fcfa2b4c61 SHA1 87cab1ccad4db7724c4292e4f32dd19accdcf2fa SHA256 b5305a12d2e3e9f9fdf645e98b0108c1bd8f5b5da32589a25bf7b0f0d74f1213
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkvRGR0ACgkQ4MrvBE1wQ8kN+wCfSlisJzIkF/d728/v+J0LnqJn
-jugAni8+hKX/UVn9fiUvww8Ykoa1yekb
-=3/+z
+iEYEARECAAYFAkwupA0ACgkQ4MrvBE1wQ8kLIgCfbod4Og70cTm2GIcqR0Knpofy
+848AnjuyR6o+WjXns7ka4e4wDwi7ZsGD
+=WtVX
 -----END PGP SIGNATURE-----
