@@ -1,6 +1,14 @@
 # ChangeLog for sys-cluster/ganglia
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/ganglia/ChangeLog,v 1.35 2010/04/23 03:50:43 jsbronder Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/ganglia/ChangeLog,v 1.36 2010/07/03 02:44:24 jsbronder Exp $
+
+*ganglia-3.1.7-r1 (03 Jul 2010)
+
+  03 Jul 2010; Justin Bronder <jsbronder@gentoo.org>
+  +ganglia-3.1.7-r1.ebuild:
+  Update python handling (#316933). Install pymods as examples per upstream.
+  Remove warnings about versions that are not in the tree. Drop now useless
+  pkg_config.
 
 *ganglia-3.1.7 (23 Apr 2010)
 
